--- a/ZH.Code/ZH.Code.csproj
+++ b/ZH.Code/ZH.Code.csproj
@@ -7,14 +7,14 @@
     <Authors>Zhirong Huang</Authors>
     <Company>zh-code.com</Company>
     <Product>IEX.API.V2.Signer</Product>
-    <Description>IEX API V2 request signer</Description>
+    <Description>Update namespace void confusion</Description>
     <PackageLicenseUrl>https://git.zh-code.com/zhironghuang/iex.api.v2.signer/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://git.zh-code.com/zhironghuang/iex.api.v2.signer</PackageProjectUrl>
     <PackageIconUrl>https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Tools.svg/128px-Tools.svg.png</PackageIconUrl>
     <RepositoryUrl>https://git.zh-code.com/zhironghuang/iex.api.v2.signer</RepositoryUrl>
     <RepositoryType>Gitlab</RepositoryType>
     <PackageTags>IEX api v2 stock cloud</PackageTags>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <PackageReleaseNotes>Change PublishToken as a parameter based on recommandations from IEX.</PackageReleaseNotes>
   </PropertyGroup>
 
