--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,5 @@
 /IEX.Test/obj
 /IEX.Test/Properties/launchSettings.json
 /TestResults
-/ZH.Code/bin/Debug/netstandard2.0
+/ZH.Code/bin
 /ZH.Code/obj
-/.cr
