--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/QSBuilder/v15
+/QueryString/bin/Debug
+/QueryString/obj
