--- a/IEXSigner/IEXSigner.csproj
+++ b/IEXSigner/IEXSigner.csproj
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>IEX.API.V2.Signer</PackageId>
-    <Authors>Zhirong Huang</Authors>
-    <Company>zh-code.com</Company>
+    <Version>1.0.6</Version>
+    <Authors>zh-code.com</Authors>
     <Product>IEX.API.V2.Signer</Product>
     <Description>Sign request for IEX API V2
 Only available to Grow and Scale users</Description>
@@ -15,10 +14,8 @@ Only available to Grow and Scale users</Description>
     <RepositoryUrl>https://git.zh-code.com/zhironghuang/iex.api.v2.signer</RepositoryUrl>
     <RepositoryType>Gitlab</RepositoryType>
     <PackageTags>IEX api v2 stock cloud</PackageTags>
-    <Version>1.0.4</Version>
     <PackageReleaseNotes>Update namespace void confusion</PackageReleaseNotes>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>ZH.Code.IEXSigner.snk</AssemblyOriginatorKeyFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
