--- a/IEXClient/IEXClient.csproj
+++ b/IEXClient/IEXClient.csproj
@@ -5,6 +5,13 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>IEXClient</PackageId>
     <Authors>zh-code.com</Authors>
+    <Description>IEX API V2 .Net Wrapper</Description>
+    <PackageLicenseUrl>https://git.zh-code.com/zhironghuang/iexdotnetwrapper/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://git.zh-code.com/zhironghuang/iexdotnetwrapper</PackageProjectUrl>
+    <PackageIconUrl>https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Tools.svg/128px-Tools.svg.png</PackageIconUrl>
+    <RepositoryUrl></RepositoryUrl>
+    <RepositoryType></RepositoryType>
+    <PackageTags>IEX Stock API Rest</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
