third dotnetcore.yml
- second attempt at pushing nuget to GitHub Packages
- added NuGet.config
- suffix prereleases w/ datetime code
- fix .nupkg path
- change .csproj to use VersionPrefix instead of Version, and have AssemblyVersion/FileVersion autogenerate
- README.md tweaks: SSE streaming, IEX paid plans, bullet

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,8 +14,8 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release --version-suffix prerelease-{{date +%Y%m%d%H%M%S}}
     - name: Setup nuget config
-      run: sed 's/GITHUB_TOKEN/${{ secrets.GHPackagesToken }}/g' .nuget.config > nuget.config
+      run: sed 's/GHPackagesToken/${{ secrets.GHPackagesToken }}/g' NuGet.config > NuGet.config
     - name: Publish nuget
-      run: dotnet nuget push src/bin/Release/*.nupkg -s "github"
+      run: dotnet nuget push IEXSharp/bin/Release/*.nupkg -s "github"
