fourth dotnetcore.yml
- fix bash variable

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: dotnet build --configuration Release --version-suffix prerelease-{{date +%Y%m%d%H%M%S}}
+      run: dotnet build --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
     - name: Setup nuget config
       run: sed 's/GHPackagesToken/${{ secrets.GHPackagesToken }}/g' NuGet.config > NuGet.config
     - name: Publish nuget
