--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,7 +15,5 @@ jobs:
         dotnet-version: 2.2.108
     - name: Build with dotnet
       run: dotnet build --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
-    - name: Setup nuget config
-      run: sed 's/GHPackagesToken/${{ secrets.GHPackagesToken }}/g' NuGet.config > NuGet.config
     - name: Publish nuget
-      run: dotnet nuget push IEXSharp/bin/Release/*.nupkg -s "github"
+      run: dotnet nuget push IEXSharp/bin/Release/*.nupkg -s https://nuget.pkg.github.com/vslee/index.json -k ${{ secrets.GHPackagesToken }}
