tenth dotnetcore.yml
- trying Password instead of ClearTextPassword

--- a/.nuget.config
+++ b/.nuget.config
@@ -9,7 +9,7 @@
     <packageSourceCredentials>
         <github>
             <add key="Username" value="vslee" />
-            <add key="ClearTextPassword" value="GHPackagesToken" />
+            <add key="Password" value="GHPackagesToken" />
         </github>
     </packageSourceCredentials>
 </configuration>
