eleventh dotnetcore.yml
- renamed packageSourceCredentials to be consistent

--- a/.nuget.config
+++ b/.nuget.config
@@ -7,9 +7,9 @@
         <add key="GitHubPackages" value="https://nuget.pkg.github.com/vslee/index.json" />
     </packageSources>
     <packageSourceCredentials>
-        <github>
+		<GitHubPackages>
             <add key="Username" value="vslee" />
             <add key="Password" value="GHPackagesToken" />
-        </github>
+        </GitHubPackages>
     </packageSourceCredentials>
 </configuration>
