--- a/.nuget.config
+++ b/.nuget.config
@@ -9,7 +9,7 @@
     <packageSourceCredentials>
 		<GitHubPackages>
             <add key="Username" value="vslee" />
-            <add key="Password" value="GHPackagesToken" />
+            <add key="ClearTextPassword" value="GHPackagesToken" />
         </GitHubPackages>
     </packageSourceCredentials>
 </configuration>
