thirteenth dotnetcore.yml
- clear global nuget sources first

--- a/.nuget.config
+++ b/.nuget.config
@@ -2,7 +2,7 @@
 <configuration>
     <packageSources>
         <!--To inherit the global NuGet package sources remove the <clear/> line below -->
-        <!--<clear />-->
+        <clear />
         <add key="nuget" value="https://api.nuget.org/v3/index.json" />
         <add key="GitHubPackages" value="https://nuget.pkg.github.com/vslee/index.json" />
     </packageSources>
