--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,9 +18,7 @@ jobs:
     #  with:
     #    dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: |  
-          cd SOLUTION_FOLDER
-          dotnet build --configuration Release --version-suffix prerelease-$(Get-Date -Format "yyyyMMddHHmmss")
+      run:  dotnet build --configuration Release --version-suffix prerelease-$(Get-Date -Format "yyyyMMddHHmmss")
     #  run: dotnet build --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
     - name: Install NuGet client
       uses: warrenbuckley/Setup-Nuget@v1
@@ -28,5 +26,14 @@ jobs:
     #  run: sed 's/GHPackagesToken/${{ secrets.GHPackagesToken }}/g' .nuget.config > nuget.config
     - name: Add GitHub Packages to NuGet
       run: nuget sources add -name "GitHubPackages" -Source https://nuget.pkg.github.com/vslee/index.json -Username vslee -Password ${{ secrets.GHPackagesToken }}
+    - name: list dir
+      run: |
+           dir
+           cd IEXSharp
+           dir
+           cd bin
+           dir
+           cd Release
+           dir
     - name: Publish nuget
       run: dotnet nuget push IEXSharp/bin/Release/*.nupkg -s "GitHubPackages"
