--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,13 +1,12 @@
-name: .NET Core
+name: prerelease NuGet
 
 on: [push]
 
 jobs:
   build:
 
-    #runs-on: ubuntu-latest
-    runs-on: windows-latest
-    name: prerelease NuGet windows
+    runs-on: ubuntu-latest
+    # also works with windows-latest and macos-latest
 
     steps:
     - name: Checkout repository
@@ -18,15 +17,15 @@ jobs:
     #  with:
     #    dotnet-version: 2.2.108
     - name: Build with dotnet
-      run:  dotnet build --configuration Release 
-    #--version-suffix prerelease-$(Get-Date -Format "yyyyMMddHHmmss")
-    #  run: dotnet build --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
-    - name: Install NuGet client
-      uses: warrenbuckley/Setup-Nuget@v1
+      run: dotnet build --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
+      shell: bash
+    #  run:  dotnet build --configuration Release --version-suffix prerelease-$(Get-Date -Format "yyyyMMddHHmmss")
+    #- name: Install NuGet client
+    #  uses: warrenbuckley/Setup-Nuget@v1
     #- name: Setup nuget config # use .NuGet.config for now 2/2 GH bug https://github.com/NuGet/Home/issues/8580
     #  run: sed 's/GHPackagesToken/${{ secrets.GHPackagesToken }}/g' .nuget.config > nuget.config
-    - name: Add GitHub Packages source to NuGet
-      run: nuget sources add -name "GitHubPackages" -Source https://nuget.pkg.github.com/vslee/index.json -Username vslee -Password ${{ secrets.GHPackagesToken }}
+    #- name: Add GitHub Packages source to NuGet
+    #  run: nuget sources add -name "GitHubPackages" -Source https://nuget.pkg.github.com/vslee/index.json -Username vslee -Password ${{ secrets.GHPackagesToken }}
     #- name: list dir
     #  run: |
     #       dir
@@ -37,5 +36,10 @@ jobs:
     #       cd Release
     #       dir
     - name: Publish nuget
-      run: dotnet nuget push .\IEXSharp\bin\Release\*.nupkg -s "GitHubPackages"
-     # run: curl -vX PUT -u "vslee:${{ secrets.GHPackagesToken }}" -F package=@OpenMedicus.Data.2.6.109.nupkg https://nuget.pkg.github.com/vslee/
+      run: |
+           for f in ./IEXSharp/bin/Release/*.nupkg
+           do
+             curl -vX PUT -u "vslee:${{ secrets.GHPackagesToken }}" -F package=@$f https://nuget.pkg.github.com/vslee/
+           done
+      shell: bash
+    #  run: dotnet nuget push .\IEXSharp\bin\Release\*.nupkg -s "GitHubPackages"
