--- a/IEXSharp/IEXSharp.csproj
+++ b/IEXSharp/IEXSharp.csproj
@@ -40,6 +40,7 @@
 		<Folder Include="Model\ForexCurrencies\Request\" />
 		<Folder Include="Model\InvestorsExchangeData\Request\" />
 		<Folder Include="Model\Shared\Request\" />
+		<Folder Include="Model\StockProfiles\Request\" />
 	</ItemGroup>
 
 	<ItemGroup>
