separate StockResearchService out of StockService
- part of overall effort to clean up StockService V2 (cloud)
- V1 (legacy) has not been separated as it is deprecated anyways

--- a/IEXSharp/IEXSharp.csproj
+++ b/IEXSharp/IEXSharp.csproj
@@ -41,6 +41,7 @@
 		<Folder Include="Model\InvestorsExchangeData\Request\" />
 		<Folder Include="Model\Shared\Request\" />
 		<Folder Include="Model\StockProfiles\Request\" />
+		<Folder Include="Model\StockResearch\Request\" />
 	</ItemGroup>
 
 	<ItemGroup>
