--- a/IEXSharp/IEXSharp.csproj
+++ b/IEXSharp/IEXSharp.csproj
@@ -53,6 +53,9 @@
 		<Folder Include="Model\Treasuries\" />
 		<Folder Include="Model\Treasuries\Request\" />
 		<Folder Include="Model\Treasuries\Response\" />
+		<Folder Include="Service\Cloud\News\" />
+		<Folder Include="Model\News\" />
+		<Folder Include="Model\News\Response\" />
 	</ItemGroup>
 
 	<ItemGroup>
