Adding Commodities Service (#33)
Adding commodities service and renaming TreasuryResponse to TimeSeriesResponse and moving to shared folder since the class is reused by the Commodities service for its response types.

Removing RecommendationTrendResponse since it has been replaced by the AnalystRecommendationsResponse.

Also fixing bugs with SocialSentimentService where service was not calling the by minute endpoint and added streaming to SocialSentimentService.

* Adding CommoditiesService. Removing RecommendationTrendResponse.

* Removing unnecessary StringExtensionsTest file.

* Fix for SocialSentiment service SentimentByMinueAsync and updated test.

* Added streaming to Social Sentiment service.

--- a/IEXSharp/IEXSharp.csproj
+++ b/IEXSharp/IEXSharp.csproj
@@ -56,6 +56,10 @@
 		<Folder Include="Service\Cloud\News\" />
 		<Folder Include="Model\News\" />
 		<Folder Include="Model\News\Response\" />
+		<Folder Include="Model\Commodities\" />
+		<Folder Include="Model\Commodities\Request\" />
+		<Folder Include="Model\Commodities\Response\" />
+		<Folder Include="Service\Cloud\Commodities\" />
 	</ItemGroup>
 
 	<ItemGroup>
