--- a/IEXSharp/IEXSharp.csproj
+++ b/IEXSharp/IEXSharp.csproj
@@ -41,6 +41,7 @@
 		<Folder Include="Model\Shared\Request\" />
 		<Folder Include="Model\StockProfiles\Request\" />
 		<Folder Include="Model\StockResearch\Request\" />
+		<Folder Include="Model\Stock\Request\" />
 		<Folder Include="Service\Cloud\SocialSentiment\" />
 		<Folder Include="Service\Cloud\CeoCompensation\" />
 		<Folder Include="Service\Cloud\Treasuries\" />
