--- a/IEXSharp/IEXSharp.csproj
+++ b/IEXSharp/IEXSharp.csproj
@@ -45,6 +45,7 @@
 		<PackageReference Include="LaunchDarkly.EventSource" Version="3.3.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+		<PackageReference Include="Polly" Version="7.2.1" />
 		<!--development dependency, which means it is only used during build.-->
 	</ItemGroup>
 
